perf: add webp image format  for background

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,12 @@
 {
   "cSpell.words": [
     "Birokrat",
+    "Ceevee",
     "Kristijan",
-    "bgrid"
+    "Modernizr",
+    "bgrid",
+    "fadein",
+    "reactjs",
+    "vuejs"
   ]
 }
